# AmenBreakChopper

./: .gitignore  .gitmodules  ControlPanel_modified.tsx  README.md
AmenBreakChopper/: AmenBreakChopper.jucer  CMakeLists.txt
AmenBreakChopper/Builds/MacOSX/: Info-AU.plist  Info-AUv3_AppExtension.plist  Info-VST3.plist  Info-VST3_Manifest_Helper.plist
AmenBreakChopper/Builds/MacOSX/AmenBreakChopper.xcodeproj/: project.pbxproj
AmenBreakChopper/Builds/iOS/: Info-AUv3_AppExtension.plist
AmenBreakChopper/Builds/iOS/AmenBreakChopper.xcodeproj/: project.pbxproj
AmenBreakChopper/JuceLibraryCode/: JuceHeader.h  JucePluginDefines.h
AmenBreakChopper/Source/: PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h  StandaloneApp.cpp
AmenBreakController/: AmenBreakController.jucer
AmenBreakController/Source/: PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h
NewProject/: NewProject.jucer
NewProject/Builds/MacOSX/: Info-AU.plist  Info-AUv3_AppExtension.plist  Info-VST3.plist  Info-VST3_Manifest_Helper.plist
NewProject/Builds/MacOSX/ABC.xcodeproj/: project.pbxproj
NewProject/Builds/MacOSX/NewProject.xcodeproj/: project.pbxproj
NewProject/Builds/iOS/: Info-AUv3_AppExtension.plist
NewProject/JuceLibraryCode/: JuceHeader.h  JucePluginDefines.h
NewProject/Source/: PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h
docs/: index.md
ui/: .gitignore  README.md  index.html  vite.config.ts
ui/src/app/: App.tsx
ui/src/hooks/: useJuceBridge.ts
ui/src/styles/: index.css
(+7 files in other folders)
